--- a/UI/imgui.ini
+++ b/UI/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=97,108
-Size=626,680
+Pos=597,281
+Size=489,314
 Collapsed=0
 
 [Window][Hello, world!]
@@ -24,20 +24,28 @@ Size=753,436
 Collapsed=0
 
 [Window][PanelWindow1]
-Pos=353,235
-Size=399,436
+Pos=831,103
+Size=326,325
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][PanelWindow2]
-Pos=942,110
-Size=184,260
+Pos=592,103
+Size=237,133
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][TestWindow]
-Pos=701,416
-Size=386,119
+Pos=592,238
+Size=237,190
 Collapsed=0
+DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1264,742 CentralNode=1 NoWindowMenuButton=1
+DockNode      ID=0x00000002 Pos=592,103 Size=565,325 Split=X
+  DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=237,325 Split=Y
+    DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=184,133 NoWindowMenuButton=1 Selected=0x38878238
+    DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=184,190 NoWindowMenuButton=1 Selected=0x42F3B5AC
+  DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=326,325 NoWindowMenuButton=1 Selected=0xA18ED382
+DockSpace     ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1264,742 CentralNode=1 NoWindowMenuButton=1
 
