--- a/UI/imgui.ini
+++ b/UI/imgui.ini
@@ -4,9 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=597,281
-Size=489,314
+Pos=0,19
+Size=359,522
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Hello, world!]
 Pos=256,544
@@ -15,7 +16,7 @@ Collapsed=1
 
 [Window][##dockspace]
 Pos=0,0
-Size=1264,761
+Size=1904,1041
 Collapsed=0
 
 [Window][PanelWindow0]
@@ -24,28 +25,31 @@ Size=753,436
 Collapsed=0
 
 [Window][PanelWindow1]
-Pos=831,103
-Size=326,325
+Pos=361,19
+Size=987,508
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000005,0
 
 [Window][PanelWindow2]
-Pos=592,103
-Size=237,133
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][TestWindow]
-Pos=592,238
-Size=237,190
+Pos=0,543
+Size=359,498
 Collapsed=0
 DockId=0x00000004,0
 
+[Window][TestWindow]
+Pos=1350,19
+Size=554,1022
+Collapsed=0
+DockId=0x00000008,0
+
 [Docking][Data]
-DockNode      ID=0x00000002 Pos=592,103 Size=565,325 Split=X
-  DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=237,325 Split=Y
-    DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=184,133 NoWindowMenuButton=1 Selected=0x38878238
-    DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=184,190 NoWindowMenuButton=1 Selected=0x42F3B5AC
-  DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=326,325 NoWindowMenuButton=1 Selected=0xA18ED382
-DockSpace     ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1264,742 CentralNode=1 NoWindowMenuButton=1
+DockSpace       ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1904,1022 Split=X NoWindowMenuButton=1
+  DockNode      ID=0x00000006 Parent=0x3F20F338 SizeRef=1376,1022 Split=X NoWindowMenuButton=1
+    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=507,1022 Split=Y NoWindowMenuButton=1 Selected=0xE927CF2F
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=507,522 NoWindowMenuButton=1 Selected=0xE927CF2F
+      DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=507,498 NoWindowMenuButton=1 Selected=0x38878238
+    DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=1395,1022 Split=Y NoWindowMenuButton=1 Selected=0xA18ED382
+      DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=867,508 NoWindowMenuButton=1 Selected=0xA18ED382
+      DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=867,512 CentralNode=1 NoWindowMenuButton=1
+  DockNode      ID=0x00000008 Parent=0x3F20F338 SizeRef=565,1022 NoWindowMenuButton=1 Selected=0x42F3B5AC
 
