--- a/UI/imgui.ini
+++ b/UI/imgui.ini
@@ -26,7 +26,7 @@ Collapsed=0
 
 [Window][PanelWindow1]
 Pos=553,19
-Size=795,515
+Size=795,506
 Collapsed=0
 DockId=0x00000002,0
 
@@ -43,13 +43,13 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Docking][Data]
-DockSpace       ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1904,1022 Split=X
+DockSpace       ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1904,1022 Split=X NoWindowMenuButton=1
   DockNode      ID=0x00000006 Parent=0x3F20F338 SizeRef=1348,1022 Split=X NoWindowMenuButton=1
-    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=551,1022 Split=Y Selected=0x38878238
+    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=551,1022 Split=Y NoWindowMenuButton=1 Selected=0x38878238
       DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=551,513 NoWindowMenuButton=1 Selected=0x38878238
       DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=551,507 NoWindowMenuButton=1 Selected=0xE927CF2F
-    DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=795,1022 Split=Y Selected=0xA18ED382
-      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=839,515 NoWindowMenuButton=1 Selected=0xA18ED382
-      DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=839,505 CentralNode=1 NoWindowMenuButton=1
+    DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=795,1022 Split=Y NoWindowMenuButton=1 Selected=0xA18ED382
+      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=795,506 NoWindowMenuButton=1 Selected=0xA18ED382
+      DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=795,514 CentralNode=1 NoWindowMenuButton=1
   DockNode      ID=0x00000008 Parent=0x3F20F338 SizeRef=554,1022 NoWindowMenuButton=1 Selected=0x42F3B5AC
 
