--- a/UI/imgui.ini
+++ b/UI/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,534
-Size=551,507
+Pos=0,357
+Size=411,684
 Collapsed=0
 DockId=0x00000004,0
 
@@ -25,31 +25,42 @@ Size=753,436
 Collapsed=0
 
 [Window][PanelWindow1]
-Pos=553,19
-Size=795,506
+Pos=413,19
+Size=1092,809
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][PanelWindow2]
 Pos=0,19
-Size=551,513
+Size=411,336
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][TestWindow]
-Pos=1350,19
-Size=554,1022
+Pos=1507,19
+Size=397,1022
 Collapsed=0
 DockId=0x00000008,0
 
+[Window][output color]
+Pos=60,60
+Size=341,250
+Collapsed=0
+
+[Window][color node editor]
+Pos=413,19
+Size=1092,809
+Collapsed=0
+DockId=0x00000002,1
+
 [Docking][Data]
 DockSpace       ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1904,1022 Split=X NoWindowMenuButton=1
-  DockNode      ID=0x00000006 Parent=0x3F20F338 SizeRef=1348,1022 Split=X NoWindowMenuButton=1
-    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=551,1022 Split=Y NoWindowMenuButton=1 Selected=0x38878238
-      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=551,513 NoWindowMenuButton=1 Selected=0x38878238
-      DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=551,507 NoWindowMenuButton=1 Selected=0xE927CF2F
-    DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=795,1022 Split=Y NoWindowMenuButton=1 Selected=0xA18ED382
-      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=795,506 NoWindowMenuButton=1 Selected=0xA18ED382
-      DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=795,514 CentralNode=1 NoWindowMenuButton=1
-  DockNode      ID=0x00000008 Parent=0x3F20F338 SizeRef=554,1022 NoWindowMenuButton=1 Selected=0x42F3B5AC
+  DockNode      ID=0x00000006 Parent=0x3F20F338 SizeRef=1505,1022 Split=X NoWindowMenuButton=1
+    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=411,1022 Split=Y NoWindowMenuButton=1 Selected=0x38878238
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=551,336 NoWindowMenuButton=1 Selected=0x38878238
+      DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=551,684 NoWindowMenuButton=1 Selected=0xE927CF2F
+    DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=1092,1022 Split=Y NoWindowMenuButton=1 Selected=0xA18ED382
+      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=795,809 NoWindowMenuButton=1 Selected=0xA18ED382
+      DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=795,211 CentralNode=1 NoWindowMenuButton=1 Selected=0x48642754
+  DockNode      ID=0x00000008 Parent=0x3F20F338 SizeRef=397,1022 NoWindowMenuButton=1 Selected=0x42F3B5AC
 
