--- a/UI/imgui.ini
+++ b/UI/imgui.ini
@@ -4,10 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,357
-Size=411,684
+Pos=0,532
+Size=369,509
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000003,0
 
 [Window][Hello, world!]
 Pos=256,544
@@ -16,7 +16,7 @@ Collapsed=1
 
 [Window][##dockspace]
 Pos=0,0
-Size=1904,1041
+Size=1711,1041
 Collapsed=0
 
 [Window][PanelWindow0]
@@ -25,42 +25,44 @@ Size=753,436
 Collapsed=0
 
 [Window][PanelWindow1]
-Pos=413,19
-Size=1092,809
+Pos=371,19
+Size=931,1022
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000007,0
 
 [Window][PanelWindow2]
 Pos=0,19
-Size=411,336
+Size=369,511
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000002,0
 
 [Window][TestWindow]
-Pos=1507,19
-Size=397,1022
+Pos=1304,19
+Size=407,1022
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][output color]
-Pos=60,60
+Pos=431,305
 Size=341,250
 Collapsed=0
 
 [Window][color node editor]
-Pos=413,19
-Size=1092,809
+Pos=941,189
+Size=949,809
 Collapsed=0
-DockId=0x00000002,1
+
+[Window][PanelWindow]
+Pos=479,102
+Size=341,250
+Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1904,1022 Split=X NoWindowMenuButton=1
-  DockNode      ID=0x00000006 Parent=0x3F20F338 SizeRef=1505,1022 Split=X NoWindowMenuButton=1
-    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=411,1022 Split=Y NoWindowMenuButton=1 Selected=0x38878238
-      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=551,336 NoWindowMenuButton=1 Selected=0x38878238
-      DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=551,684 NoWindowMenuButton=1 Selected=0xE927CF2F
-    DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=1092,1022 Split=Y NoWindowMenuButton=1 Selected=0xA18ED382
-      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=795,809 NoWindowMenuButton=1 Selected=0xA18ED382
-      DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=795,211 CentralNode=1 NoWindowMenuButton=1 Selected=0x48642754
-  DockNode      ID=0x00000008 Parent=0x3F20F338 SizeRef=397,1022 NoWindowMenuButton=1 Selected=0x42F3B5AC
+DockSpace       ID=0x3F20F338 Window=0xEFEA1D90 Pos=0,19 Size=1711,1022 Split=X NoWindowMenuButton=1
+  DockNode      ID=0x00000006 Parent=0x3F20F338 SizeRef=1302,1022 Split=X NoWindowMenuButton=1
+    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=369,1022 Split=Y NoWindowMenuButton=1 Selected=0x38878238
+      DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=369,511 NoWindowMenuButton=1 Selected=0x38878238
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=369,509 NoWindowMenuButton=1 Selected=0xE927CF2F
+    DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=931,1022 CentralNode=1 NoWindowMenuButton=1 Selected=0xA18ED382
+  DockNode      ID=0x00000008 Parent=0x3F20F338 SizeRef=407,1022 NoWindowMenuButton=1 Selected=0x42F3B5AC
 
